Improved filter, fixed tailwind config, removed unfilder hidding

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 				placeholder="Filter..."
 				data-table-filter="data-table-filter"
 				aria-label="Filter"
+				class="p-2"
 			/>
 			<button
 				type="button"
 				data-table-unfilter="data-table-unfilter"
-				hidden="hidden"
+				class="p-2 bg-slate-500 text-white"
 			>
 				Unfilter
 			</button>
