prevent page zoom when focusing filter input

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 				placeholder="Filter..."
 				data-table-filter="data-table-filter"
 				aria-label="Filter"
-				class="p-2 rounded-none min-w-0"
+				class="p-2 rounded-none min-w-0 text-base"
 			/>
 			<button
 				type="button"
 				data-table-unfilter="data-table-unfilter"
-				class="px-2 py-2 lg:px-4 bg-slate-500 text-white font-bold"
+				class="px-2 py-2 lg:px-4 bg-slate-500 text-white font-bold text-base"
 			>
 				Unfilter
 			</button>
