--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				data-table-filter="data-table-filter"
 				aria-label="Filter"
 				class="p-2 rounded-none min-w-0 text-base"
+				autocapitalize="none"
 			/>
 			<button
 				type="button"
