first commit to display text lesson

--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
 			</div>
 		</div>
 
+		<div class="dialog-container" aria-hidden="true" id="lessons">
+			<div data-a11y-dialog-hide class="dialog-overlay"></div>
+			<div role="document" class="dialog-content">
+				<button
+					type="button"
+					data-a11y-dialog-hide
+					aria-label="Close dialog"
+					class="absolute right-0 top-0 p-2 hover:bg-slate-400 transition-all text-4xl"
+				>
+					&times;
+				</button>
+				<h1
+					id="your-dialog-title-id"
+					data-lesson-title
+					class="font-bold text-4xl text-center mb-4"
+				></h1>
+				<div data-lesson-content class="space-y-2"></div>
+			</div>
+		</div>
+
 		<script type="module" src="/src/main.js"></script>
 	</body>
 </html>
