--- a/index.html
+++ b/index.html
@@ -131,10 +131,11 @@
 					data-lesson-title
 					class="font-bold text-4xl text-center mb-4"
 				></h1>
-				<div data-lesson-content class="space-y-2"></div>
+				<div data-lesson-content class="space-y-4 lg:space-y-6"></div>
 			</div>
 		</div>
 
 		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="/src/lesson.js"></script>
 	</body>
 </html>
