--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="wrapper lg:flex">
 			<div
 				data-table
-				class="relative overflow-auto min-w-0 w-full lg:w-4/5 lg:resize-x pr-5 md:pr-0 bg-slate-300"
+				class="relative overflow-auto min-w-0 w-full lg:w-4/5 lg:resize-x bg-slate-300"
 			></div>
 
 			<div
