--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
 			</div>
 		</div>
 
+		<script type="module" src="/src/sw.js"></script>
 		<script type="module" src="/src/main.js"></script>
 		<script type="module" src="/src/lesson.js"></script>
 		<script type="module" src="/src/lesson-list.js"></script>
