--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<body class="bg-black">
 		<div
-			class="filter flex justify-center items-center sticky top-0 bg-black text-sm z-10 p-2 space-x-2 lg:space-x-4"
+			class="filter flex justify-center items-center sticky top-0 bg-black text-sm z-10 p-1 space-x-2 lg:space-x-4"
 		>
 			<h1
 				class="text-white text-xs lg:text-3xl font-bold uppercase whitespace-nowrap"
@@ -34,10 +34,10 @@
 				class="bg-slate-500 text-white p-1 text-base lg:px-2 lg:font-bold"
 				data-a11y-dialog-show="lesson-list"
 			>
-				Lessons
+				Open Lessons
 			</button>
 
-			<div class="relative min-w-0">
+			<div class="relative min-w-0 w-40 lg:w-56">
 				<input
 					type="text"
 					placeholder="Filter..."
