--- a/index.html
+++ b/index.html
@@ -167,90 +167,90 @@
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="1"
+							data-lesson-trigger="1-1"
 							data-a11y-dialog-hide
 						>
-							Lesson 1
+							Lesson 1-1
 						</button>
 					</li>
 					<li>
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="2"
+							data-lesson-trigger="1-2"
 							data-a11y-dialog-hide
 						>
-							Lesson 2
+							Lesson 1-2
 						</button>
 					</li>
 					<li>
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="3"
+							data-lesson-trigger="1-3"
 							data-a11y-dialog-hide
 						>
-							Lesson 3
+							Lesson 1-3
 						</button>
 					</li>
 					<li>
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="4"
+							data-lesson-trigger="1-4"
 							data-a11y-dialog-hide
 						>
-							Lesson 4
+							Lesson 1-4
 						</button>
 					</li>
 					<li>
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="5"
+							data-lesson-trigger="1-5"
 							data-a11y-dialog-hide
 						>
-							Lesson 5
+							Lesson 1-5
 						</button>
 					</li>
 					<li>
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="6"
+							data-lesson-trigger="1-6"
 							data-a11y-dialog-hide
 						>
-							Lesson 6
+							Lesson 1-6
 						</button>
 					</li>
 					<li>
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="7"
+							data-lesson-trigger="1-7"
 							data-a11y-dialog-hide
 						>
-							Lesson 7
+							Lesson 1-7
 						</button>
 					</li>
 					<li>
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="8"
+							data-lesson-trigger="1-8"
 							data-a11y-dialog-hide
 						>
-							Lesson 8
+							Lesson 1-8
 						</button>
 					</li>
 					<li>
 						<button
 							type="button"
 							data-a11y-dialog-show="lessons"
-							data-lesson-trigger="9"
+							data-lesson-trigger="1-9"
 							data-a11y-dialog-hide
 						>
-							Lesson 9
+							Lesson 1-9
 						</button>
 					</li>
 				</ul>
