Added text 1 from book 2 and changed font-family

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 			href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300&display=swap"
 			rel="stylesheet"
 		/>
+
+		<script>
+			(function(d) {
+				var config = {
+					kitId: 'eju7trp',
+					scriptTimeout: 3000,
+					async: true
+				},
+				h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+			})(document);
+		</script>
 	</head>
 
 	<body class="bg-black">
@@ -162,6 +173,10 @@
 				<h1 id="dialog-lesson-list" class="font-bold text-4xl text-center mb-4">
 					Lessons list
 				</h1>
+
+				<h2 id="dialog-lesson-list" class="font-bold text-xl text-center mb-4">
+					Book 1
+				</h1>
 				<ul>
 					<li>
 						<button
@@ -254,6 +269,21 @@
 						</button>
 					</li>
 				</ul>
+
+				<h2 id="dialog-lesson-list" class="font-bold text-xl text-center mb-4">
+					Book 2
+				</h1>
+				<ul>
+					<li>
+						<button
+							type="button"
+							data-a11y-dialog-show="lessons"
+							data-lesson-trigger="2-1"
+							data-a11y-dialog-hide
+						>
+							Lesson 2-1
+						</button>
+					</li>
 			</div>
 		</div>
 
