Added lesson 2 and vocabulary

--- a/index.html
+++ b/index.html
@@ -277,6 +277,16 @@
 							Lesson 2-1
 						</button>
 					</li>
+					<li>
+						<button
+							type="button"
+							data-a11y-dialog-show="lessons"
+							data-lesson-trigger="2-2"
+							data-a11y-dialog-hide
+						>
+							Lesson 2-2
+						</button>
+					</li>
 			</div>
 		</div>
 
