fixed col width issue

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 		>
 			<div
 				data-table
-				class="transition-all max-lg:group-[.is-opened]:min-h-[80%] lg:group-[.is-opened]:min-w-[80%] min-h-0 relative overflow-auto lg:resize-x bg-slate-300 max-lg:h-1/2"
+				class="transition-all max-lg:group-[.is-opened]:min-h-[80%] lg:group-[.is-opened]:min-w-[80%] min-h-0 relative overflow-auto lg:resize-x bg-slate-300 max-lg:h-1/2 lg:grow"
 			></div>
 
 			<div
-				class="bg-white p-2 max-lg:border-t-4 lg:border-l-4 border-black overflow-auto max-lg:h-1/2"
+				class="bg-white p-2 max-lg:border-t-4 lg:border-l-4 border-black overflow-auto max-lg:h-1/2 lg:grow"
 			>
 				<button
 					type="button"
@@ -103,7 +103,6 @@
 
 				<div data-lesson>
 					<h1
-						id="dialog-lesson-title"
 						data-lesson-title
 						class="font-bold text-4xl text-center mb-4"
 					></h1>
