--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -261,6 +261,16 @@
 							data-a11y-dialog-hide
 						>
 							Lesson 2-3
+						</button>
+					</li>
+					<li>
+						<button
+							type="button"
+							data-a11y-dialog-show="lessons"
+							data-lesson-trigger="2-4"
+							data-a11y-dialog-hide
+						>
+							Lesson 2-4
 						</button>
 					</li>
 				</ul>
