added language choice

--- a/index.html
+++ b/index.html
@@ -65,12 +65,22 @@
 				<button
 					type="button"
 					data-table-unfilter="data-table-unfilter"
-					class="absolute right-0 top-1/2 -translate-y-1/2 text-slate-500 font-bold text-base lg:text-2xl p-2"
+					class="absolute right-0 top-1/2 -translate-y-1/2 text-slate-500 font-bold text-base p-2"
 					title="unfilter"
 				>
 					X
 				</button>
 			</div>
+
+			<select
+				name="lang"
+				data-language
+				class="p-1 rounded-none text-base"
+				aria-label="Language"
+			>
+				<option value="english">English</option>
+				<option value="french">Français</option>
+			</select>
 		</div>
 
 		<div
